add support for video inference by zf

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,12 @@ output_dir/
 
 # macos
 .DS_Store
+
+# images
+output/
+output_dir/
+demo/
+videos/
+haha.jpeg
+ppgan/faceutils/face_segmentation/faceseg_FCN-HRNetW18.pdparams
+ppgan/apps/photo2cartoon_genA2B_weight.pdparams
